ex1-2-3-4-5 are solved

--- a/2-Browsers/Week1/homework/ex1-bookList/index.html
+++ b/2-Browsers/Week1/homework/ex1-bookList/index.html
@@ -4,6 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Book List</title>
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
+      body {
+        font-family: monospace;
+        font-size: 1.5em;
+        text-align: center;
+        min-height: 100vh;
+        background: linear-gradient(
+          to right,
+          rgb(143, 143, 143),
+          rgb(202, 195, 195)
+        );
+      }
+      h1 {
+        padding: 10px 0px;
+      }
+      .books-list {
+        display: flex;
+        justify-content: center;
+        list-style: none;
+        text-align: center;
+        margin: 20px 0px;
+      }
+      .list-item {
+        margin: 10px;
+        padding: 10px;
+        border-radius: 10px;
+      }
+    </style>
   </head>
 
   <body>
