--- a/2-Browsers/Week1/homework/ex5-catWalk/index.html
+++ b/2-Browsers/Week1/homework/ex5-catWalk/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cat Walk</title>
     <style>
+      * {
+        margin: 0;
+        padding: 0;
+      }
+      body {
+        min-height: 100vh;
+      }
       img {
         position: absolute;
       }
